@@ -1,5 +1,5 @@
 # Note that this is NOT a relocatable package
-%define ver      @VERSION@
+%define ver     @VERSION@ 
 %define rel      SNAP
 %define prefix   /usr
 
@@ -37,6 +37,10 @@ Xlib to help automate things like dealing with different color depths,
 and GTK is a widget set for creating user interfaces.
 
 %changelog
+
+* Tue Jun  1 1999 Jose Mercado <jmercado@mit.edu>
+- Corrected some typos in files section.
+
 * Sun Feb 21 1999 Michael Fulbright <drmike@redhat.com>
 - updated spec file
 
@@ -148,10 +152,10 @@ fi
 %defattr(-, root, root)
 
 %doc AUTHORS COPYING ChangeLog NEWS README TODO
-%{prefix}/lib/libgtk-1.1.so.*
-%{prefix}/lib/libgdk-1.1.so.*
-{prefix}/share/themes/Default
-+%{prefix}/share/locale/*/*/*
+%{prefix}/lib/libgtk-1.3.so.*
+%{prefix}/lib/libgdk-1.3.so.*
+%{prefix}/share/themes/Default
+%{prefix}/share/locale/*/*/*
  
 
 %files devel
